force-app/main/default/objects/cgcloud__Sales_Folder__c/cgcloud__Sales_Folder__c.object-meta.xml
<CustomObject>
    <description>This object contains the attributes associated with the Sales Folder.</description>
    <label>Sales Folder</label>
    <nameField>
        <label>Sales Folder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Folders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>