force-app/main/default/objects/cgcloud__Sales_Folder__c/fields/cgcloud__Note__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Note__c</fullName>
    <description>General Notes about the Sales Folder.</description>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>