force-app/main/default/objects/cgcloud__Sales_Folder__c/fields/cgcloud__Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the org unit.</description>
    <label>Org Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Org_Unit__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Org_Unit__c</referenceTo>
    <relationshipLabel>Sales Folders</relationshipLabel>
    <relationshipName>Sales_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>