force-app/main/default/objects/cgcloud__Sales_Folder__c/fields/cgcloud__Sales_Folder_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Folder_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Sales Folder Template</description>
    <label>Sales Folder Template</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>No matches found or Sales Folder Template is not active.</errorMessage>
        <filterItems>
            <field>cgcloud__Sales_Folder_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Sales_Folder_Template__c</referenceTo>
    <relationshipLabel>Sales Folders</relationshipLabel>
    <relationshipName>Sales_Folders</relationshipName>
    <type>Lookup</type>
</CustomField>