force-app/main/default/objects/cgcloud__Sales_Folder__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <description>First date of validity period of the sales folder.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>