force-app/main/default/objects/cgcloud__Sales_Folder__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <description>Last date of validity period of the sales folder.</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>