force-app/main/default/objects/cgcloud__Sales_Folder__c/validationRules/cgcloud__Check_If_Customer_Sales_Org_Matches.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Customer_Sales_Org_Matches</fullName>
    <active>true</active>
    <description>The Customer and the Sales Folder must have the same Sales Org.</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Sales_Folder_Template__r.cgcloud__Anchor_Type__c, &apos;BusinessPartner&apos;) &amp;&amp; NOT(ISBLANK(cgcloud__Account__c)) &amp;&amp; cgcloud__Account__r.cgcloud__Sales_Org__c &lt;&gt; TEXT(cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Customer and the Sales Folder must have the same Sales Org.</errorMessage>
</ValidationRule>