force-app/main/default/objects/cgcloud__Sales_Folder__c/validationRules/cgcloud__Check_If_Sales_Org_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Sales_Org_Is_Changed</fullName>
    <active>true</active>
    <description>The Sales Org cannot be edited after Sales Folder creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Sales Org can&apos;t be edited after Sales Folder creation.</errorMessage>
</ValidationRule>