force-app/main/default/objects/cgcloud__Sales_Folder__c/validationRules/cgcloud__Check_If_Valid_From_More_Than_Valid_Thru.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Valid_From_More_Than_Valid_Thru</fullName>
    <active>true</active>
    <description>Valid From can&apos;t be later than Valid Thru.</description>
    <errorConditionFormula>cgcloud__Valid_From__c  &gt;  cgcloud__Valid_Thru__c</errorConditionFormula>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>